# cobranca-bot-whatsapp

./: .gitignore  README.md  cobranca.pyw  cobranca.spec  cobranca.ui  pyproject.toml  requirements.txt
cobranca-bot-whatsapp/: cobranca.py
cobrancaWhatsapp/cobranca-bot-whatsapp/: cobranca.py
cobrancaWhatsapp/graphicInterface/: cobranca.ui
log/: contatos_nao_enviados.csv
