[tool.poetry]
name = "cobranca-bot-whatsapp"
version = "0.1.0"
description = "Mensagem automática whatsapp"
authors = ["geovanecarvalho <geovaneoliveira.75@hotmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
selenium = "^4.10.0"
webdriver-manager = "^3.8.6"
pyqt5 = "^5.15.9"


[tool.poetry.group.dev.dependencies]
pytest = "^7.4.0"
blue = "^0.9.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
